AC_INIT([Netspire], [0.1], [], [])

AC_PREREQ(0.1)

AC_PROG_MAKE_SET

AM_WITH_ERLANG

# Change default prefix
AC_PREFIX_DEFAULT(/usr/local/)

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([src/Makefile])
AC_CONFIG_FILES([src/modules/Makefile])
AC_CONFIG_FILES([src/netflow/Makefile])
AC_CONFIG_FILES([src/radius/Makefile])
AC_CONFIG_FILES([src/lib/Makefile])

AC_OUTPUT
